--- a/teams.html
+++ b/teams.html
@@ -67,6 +67,36 @@
       content: "🏏 ";
       color: #872dd2;
     }
+
+    .footer {
+      text-align: center;
+      padding: 40px 20px;
+    }
+
+    .footer-note {
+      font-size: 1em;
+      font-weight: bold;
+      margin-bottom: 20px;
+      color: #ffcc00;
+    }
+
+    .sponsor-logos {
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      flex-wrap: wrap;
+    }
+
+    .sponsor-logos img {
+      height: 60px;
+      width: auto;
+      display: block;
+      background: transparent;
+      border-radius: 0;
+      margin: 0;
+      padding: 0;
+      box-shadow: none;
+    }
   </style>
 </head>
 <body>
@@ -97,6 +127,14 @@
       <tr><td>Kerala</td></tr>
       <tr><td>Himachal Pradesh</td></tr>
     </table>
+  </div>
+
+  <div class="footer">
+    <div class="footer-note">Official Sponsors</div>
+    <div class="sponsor-logos">
+      <img src="https://i.ibb.co/S7Z8D6GV/a274881e-a2f1-4cad-b6f3-2fa70f43be62.png" alt="Sponsor 1">
+      <img src="https://i.ibb.co/5X8QjYxZ/709e7767-eb23-4236-b65f-b827a4032473.png" alt="Sponsor 2">
+    </div>
   </div>
 
 </body>
